Hopefully fixed the table text vertical alignment issue on mobile

--- a/assets/css/table.css
+++ b/assets/css/table.css
@@ -17,7 +17,6 @@
 
 .custom-tbl td #text {
   position: relative;
-  top: 2px;
   float: left;
 }
 
